# panda3d-thirdparty

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  artoolkit-config.h.cmake  artoolkit.cmake  azure-pipelines.yml  harfbuzz.cmake  install-python.ps1  libjpeg.cmake  libode-config.h.cmake  libode.cmake  libogg.cmake  libopusfile.cmake  libsquish.cmake  libtiff.cmake  libvorbis.cmake  openal.cmake  openexr.cmake  openssl-ms.bat
.github/workflows/: ci.yml
Pmw/Pmw_2_0_1/lib/: PmwColor.py
patches/: glslang-no-std-filesystem.patch  openal-1.24.3-no-aligned-alloc.patch  openal-soft-1.19.1-fcommon.patch  openexr-2.2.2.patch  openssl-1.0.2u-darwin-arm64.patch  openssl-1.0.2u-no-pdb.patch  png-1.6.50-arm-neon.patch  spirv-tools-config-package-dir.patch
